    column), the default values for grid_n and ramp_n, and returning an error
    when invalid values are used (instead of silently adjusting them).

 ** Fixed failing tests for the following functions:
    pei_tseng_notch
    residued

 ** The function `rceps' was fixed to work correctly with odd-length inputs.

 ** Bugfix in `xcorr2' introduced in 1.1.2 that would not accept "none" as
    sacle option.

 ** The following functions are new:
    movingrms  schtrig  clustersegment

 ** signal is no longer dependent on the image package.

 ** signal is now dependent on the general package.

===============================================================================
signal-1.1.3   Release Date: 2012-05-12   Release Manager: Carnë Draug
===============================================================================

 ** signal is no longer dependent on the audio package.

 ** signal is now dependent on the image package.

 ** The function `marcumq' was imported from the communications package and has
    been completely rewritten to improve performance and fix computational
    errors.

 ** Package is no longer automatically loaded.

 ** The functions `__ellip_ws' and `__ellip_ws_min' have been removed (they
    are now subfunctions of `ncauer'.

 ** The function `blackmanharris' was fixed to have even symmetry.

===============================================================================
signal-1.1.2   Release Date: 2012-01-06   Release Manager: Lukas Reichlin
===============================================================================

 * Added the following filter conversion functions:
    ss2tf
    ss2zp
    tf2ss
    tf2zp
    zp2ss
    zp2tf

===============================================================================
signal-1.1.1   Release Date: 2011-11-06   Release Manager: Juan Pablo Carbajal
===============================================================================
